# COCO2YOLO

./: .autoenv.zsh  .autoenv_leave.zsh  .gitignore  COCO2YOLO.py  Doxyfile  c2y_ast.ipynb  pyproject.toml
c2y/: __init__.py  __main__.py  utils.py
tests/: utils_test.py
