[tool.poetry]
name = "coco2yolo"
version = "0.1.0"
description = ""
authors = ["hobbymarks <ihobbymarks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yapf = "^0.40.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
