[tool.poetry]
name = "c2y"
version = "0.1.3"
description = "Convert coco datasets to yolo datasets"
authors = ["hobbymarks <ihobbymarks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pycocotools = "^2.0.6"
pyyaml = "^6.0.1"
fire = "^0.5.0"
pytest = "^7.4.0"
coverage = "^7.2.7"
loguru = "^0.7.0"
oyaml = "^1.0"
pytest-mock = "^3.11.1"
mimetypes-magic = "^0.4.30"

[tool.poetry.scripts]
c2y = "pytho -m c2y"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
